# Q4_AI_Learning_Exploration

./: LICENSE  README.md
06_Tast_Tracker_Api/06_task_tracker_api/: pyproject.toml  run.sh
06_Tast_Tracker_Api/06_task_tracker_api/app/: main.py  models.py  schemas.py  storage.py  validators.py
07_Open_Ai_Agent_sdk/: README.md
API_PARAMETERS/: TASK_2.md
API_PARAMETERS/TASK_4_API_Parameters/03_api_parameters/: README.md  main.py  models.py  pyproject.toml
API_PARAMETERS/TASK_4_API_Parameters/03_api_parameters/routes/: batman.py
Demystifying LLMs: The Brains Behind Autonomous AI Systems/: README.md
Dependencies_Injection/TASK_5_dependency_injection/fastdca_p1/: main.py  pyproject.toml
Dependencies_Injection/TASK_5_dependency_injection/fastdca_p1/dependencies/: blog_dependency.py
Dependencies_Injection/TASK_5_dependency_injection/fastdca_p1/models/: blogs.py
FASTAPI/: TASK_2.md
FASTAPI/my_fastapi_project/my_fastapi_project/app/: main.py
FASTAPI/my_fastapi_project/my_fastapi_project/app/routes/: batman.py
PYDANTIC_VALIDATION/: TASK_3.md
PYDANTIC_VALIDATION/pydantic_validation/fastdca_p1/: README.md  main.py  pydantic_example_1.py  pydantic_example_2.py  pydantic_example_3.py  pyproject.toml
WAHT_IS_GENRATIVE_AI/: GENRATIVE_AI.md
spec-driven-development/30-days-challenge/: day-1.md  day-2.docx
