[tool.poetry]
name = "task-tracker-api"
version = "0.1.0"
description = "A simple FastAPI project for managing users and tasks"
authors = ["Nirma Qureshi <nirmaqureshi786@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
